# LangChainInDocker

./: .gitignore  Dockerfile  README.md  app.py  build-and-run.ps1  build-and-run.sh  pyproject.toml
